2007-12-16  Heiko Stamer <stamer@gaos.org>
	* tpm_transport.c: missing ptr initialization fixed

2007-12-07  Heiko Stamer <stamer@gaos.org>
	* tpm_deprecated.c: DIR index value bug fixed


2006-12-03  Mario Strasser <mast@gmx.net>
	* Makefile: tpm_dev excluded from standard distribution


2006-12-03  Mario Strasser <mast@gmx.net>
	* all: tpm daemon and device driver library added


2006-11-29  Mario Strasser <mast@gmx.net>
	* Makefile: VERSION_SUFFIX added


2006-11-14  Mario Strasser <mast@gmx.net>
	* gmp_kernel_wrapper.c, tpm_data.c: import and export
		functions simplified
	* tpm_emulator_config.h: min/max macros renamed
	* tpm_data.c, tpm_cmd_handler.c, tpm_startup.c:
		startup/restore behavior adapted according to rev94


2006-11-12  Mario Strasser <mast@gmx.net>
	* gmp_kernel_wrapper.c: __stack_chk_fail() to GNU MP wrapper added
	* tpm_daa.c: size_t vs. uint32_t issue in DAA routines fixed
	* rsa.c, tpm_daa.c, tpm_deprecated.c, tpm/tpm_testing.c,
		tpm_transport.c: pointer signedness warnings fixed


2006-11-11  Mario Strasser <mast@gmx.net>
	* bn.[ch], rsa.[ch], tpm_daa.c, tpm_storage.c, tpm_testing.c:
		bn wrapper added
	* gmp_kernel_wrapper.c, linux_module.c: printf format for size_t fixed


2006-11-10  Mario Strasser <mast@gmx.net>
	* all: potential name space conflicts for global symbols solved


2006-11-07  Mario Strasser <mast@gmx.net>
	* sha1.[ch], tpm_*: some issues related to 64bit architecture
		and size_t fixed
	* rsa.c: potential bug in key generation fixed
	* all: advanced compiler warnings and name space collisions fixed


2006-10-25  Mario Strasser <mast@gmx.net>
	* gmp_kernel_wrapper.c, rsa.c: removed all GNU MP random routines
	* linux_module.c, linux_module.h, tpm_emulator_config.h: moved all host
		specific functions and configuration parameters from
		linux_module.h into tpm_emulator_config.h
	* tpm_audit.c, tpm_identity.c, tpm_marshalling.h, tpm_transport.c:
		fixed some marshalling statements which cause troubles