@@ -1,5 +1,10 @@
+2007-12-19  Heiko Stamer <stamer@gaos.org>
+	* tpm_integrity.c: signature bug in TPM_Quote2() fixed
+
+
 2007-12-16  Heiko Stamer <stamer@gaos.org>
 	* tpm_transport.c: missing ptr initialization fixed
+
 
 2007-12-07  Heiko Stamer <stamer@gaos.org>
 	* tpm_deprecated.c: DIR index value bug fixed
